Changes on diseases DB and swagger
